--- a/Dockerfile.query
+++ b/Dockerfile.query
@@ -20,6 +20,6 @@ FROM scratch
 COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
 EXPOSE 16686
-COPY --from=0 /go/src/github.com/jaegertracing/jaeger/cmd/query/query-linux /go/bin/
+COPY --from=0 /go/src/github.com/jaegertracing/jaeger/cmd/query/query- /go/bin/query-linux
 
 ENTRYPOINT ["/go/bin/query-linux"]
