--- a/Dockerfile.query
+++ b/Dockerfile.query
@@ -10,7 +10,8 @@ RUN curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh && 
     git submodule update --init --recursive && \
     dep ensure
 
-RUN make build_ui
+RUN make install-statik
+RUN cd cmd/query/app/ui/actual; statik -f -src ../../../../../jaeger-ui/packages/jaeger-ui/build
 RUN make build-query
 
 FROM alpine:latest as certs
